# Template_CMake

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Template_CMake.code-workspace  build.sh
cmake/: CommonConfig.cmake  FindLocalBoost.cmake  FindLocalGRPC.cmake  FindLocalLibhv.cmake  FindLocalNlohmannJson.cmake  FindLocalOpenCV.cmake  FindLocalSpdlog.cmake  ImportThirdParty.cmake  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/utils/: CMakeLists.txt  utils_spdlog.cc  utils_spdlog.h  utils_spdlog_test.cc  utils_time.cc  utils_time.h  utils_time_test.cc
src/demo_grpc/: CMakeLists.txt
src/demo_grpc/async_grpc/: CMakeLists.txt
src/demo_grpc/async_grpc/client/: greeter_client.cc
src/demo_grpc/async_grpc/protos/: async_grpc.grpc.pb.cc  async_grpc.grpc.pb.h  async_grpc.pb.cc  async_grpc.pb.h  async_grpc.proto
src/demo_grpc/async_grpc/server/: greeter_server.cc
src/demo_grpc/beautiful_world/: CMakeLists.txt
src/demo_grpc/beautiful_world/client/: greeter_client.cc
src/demo_grpc/beautiful_world/protos/: beautiful_world.grpc.pb.cc  beautiful_world.grpc.pb.h  beautiful_world.pb.cc  beautiful_world.pb.h  beautiful_world.proto
src/demo_grpc/beautiful_world/server/: greeter_server.cc
test/: CMakeLists.txt
test/test_nlohmannjson/: CMakeLists.txt  test_nlohmannjson.cc
test/test_spdlog/: CMakeLists.txt  test_spdlog.cc
